--- a/algorithms.html
+++ b/algorithms.html
@@ -2,7 +2,9 @@
 layout: default
 title: Algorithms
 ---
+{% include navigation.html %}
 <h1>Algorithms</h1>
+
 
 <ul>
     {% for algorithm in site.algorithms %}
