--- a/articles.html
+++ b/articles.html
@@ -2,7 +2,9 @@
 layout: default
 title: Articles
 ---
+{% include navigation.html %}
 <h1>Published Articles</h1>
+
 
 <ul>
     {% for article in site.articles %}
