--- a/datasets.html
+++ b/datasets.html
@@ -2,7 +2,9 @@
 layout: default
 title: Dataset
 ---
+{% include navigation.html %}
 <h1>Dataset</h1>
+
 
 <ul>
     {% for dataset in site.datasets %}
