--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@ layout: default
 title: Home
 
 ---
-<h1>{{ "Brain2Speech" }}</h1>
+{% include navigation.html %}
+<h1>{{ "Welcome To Brain2Speech" }}</h1>
