--- a/index.html
+++ b/index.html
@@ -6,3 +6,5 @@ title: Home
 ---
 {% include navigation.html %}
 <h1>{{ "Welcome To Brain2Speech" }}</h1>
+<p> This site makes available EEG signal processing algorithms and other resources developed by the UBC Human Communications Lab</p>
+
