--- a/people.html
+++ b/people.html
@@ -10,7 +10,7 @@ title: People
     <li>
         <h2><a href="{{ people.url }}">{{ people.name }}</a></h2>
         <h3>{{ people.position }}</h3>
-        <p>{{ people.content | markdownify }}</p>
+       <!--- <p>{{ people.content | markdownify }}</p>--->
     </li>
     {% endfor %}
 </ul>
