--- a/publication.html
+++ b/publication.html
@@ -1,11 +1,8 @@
 ---
 layout: publication
-title: publication
+title: Publication
 ---
-
-<div class="col-lg-12 text-center">
-    <h1 class="section-heading">Publications</h1>
-</div>
+<p><br></p>
 
     <div class="container">
         <div class="row">
@@ -69,6 +66,7 @@ title: publication
         <h2>2018</h2>
         <hr>
         {% for post in site.posts %}
+        for year in post.year
         {%if post.year == 2018 %}
 
         <a class="fa fa-plus fa-3x" aria-hidden="true" type="button" data-toggle="collapse" href="#{{post.title}}" role="button" aria-expanded="false" aria-controls="links" >
