--- a/_algorithms/KNN.html
+++ b/_algorithms/KNN.html
@@ -47,7 +47,47 @@ And saves a 2D scatter plot of the result in a png file </p>
 <script src="https://unpkg.com/thebelab@0.3.3/lib/index.js"></script>
 
 
-<pre data-executable="true" data-language="python">print("hi")</pre>
+<pre data-executable="true" data-language="python">
+%matplotlib inline
+import warnings
+warnings.filterwarnings('ignore')
+    
+import pandas as pd
+import numpy as np
+import matplotlib.pyplot as plt
+import random
+from knn_nn_lstm.tools import utils, knn, EEG_feature_extraction
+from knn_nn_lstm.classifiers import EEG_load
+
+
+# main - train&test
+#dataset = EEG_load.load_data("s16",20)
+
+dataset = EEG_feature_extraction.generate_feature_data("s05",20)
+
+X = dataset['X_train']
+y = dataset['Y_train']
+Xtest = dataset['X_test']
+ytest = dataset['Y_test']
+
+k=[1,3,10]
+for i in range(3):
+    model=knn.fit(X,y,k[i])
+    y_pred=knn.predict(model,X)
+    train_error=np.mean(y_pred.flatten() != y)
+    print("The current training error is: %r" % train_error)
+
+    y_pred=knn.predict(model, Xtest)
+    test_error=np.mean(y_pred.flatten() != ytest)
+    print("The current test error is: %r" % test_error)
+
+# part 3: plot classification boundaries for k=1 (use utils.plot_2dclassifier)
+model1=knn.fit(X, y, k[2])
+utils.plot_2dclassifier(model1, X, y)
+plt.show()
+
+
+</pre>
 
 <p>Try clicking the button. The cell will be come active!</p>
 <button id="activateButton" style="width: 120px; height: 40px; font-size: 1.5em;">Activate</button>
