--- a/_algorithms/KNN.html
+++ b/_algorithms/KNN.html
@@ -103,6 +103,8 @@ plt.show()
 
     <h2> Download </h2>
     <p>Go to our GitHub page to <a href="https://github.com/Brain2Speech/Algorithms-/tree/master/KNN%2C%20NN%2C%20LSTM">download</a> the code</p>
+    By downloading our algorithms, you have read our <a href="\research_policies.html">research policies </a> and agreed to our <a href="\terms_and_conditions.html">terms of use </a> </p>
+
 
 
 </div>
