--- a/datasets.html
+++ b/datasets.html
@@ -5,7 +5,12 @@ title: Dataset
 
 <center>
     <p><br></p>
-    <p>The dataset from the Brain2Speech are available for download on our GitHub Page</p>
+    <p>Here are the descriptions of the data collected by the research group at HCT.
+        Download will be available upon request. <br>If you are interested, please feel free to use the <a href="#contact">contact form</a> to get in touch with us.
+        <br><br><br>
+
+        All of the data are collected adhering to our <a href="\research_policies.html"> research policies</a>.
+        <hr>
 </center>
 
 
@@ -22,7 +27,7 @@ title: Dataset
 
         </div>
         <p>
-            <a href={{data.link}}><button class="btn-primary-2"><i class="fa fa-download"></i> Download</button></a>
+            <a href=#contact><button class="btn-primary-2"><i class="fa fa-download"></i> Download</button></a>
         </p>
 
 
