--- a/algorithm.html
+++ b/algorithm.html
@@ -9,7 +9,7 @@ title: Algorithms
         <p><br></p>
 <p>Our algorithms are split into 2 main categories: Speech Synthesis and Signal Processing. <br>
 You can learn more about the algorithm that are used in our research and run online examples and download our code <a herf="https://github.com/Brain2Speech/Algorithms">Here</a>.
-     <br> <br><br>By downloading our algorithms, you have read our <a herf="/research_policies.html">research policies </a> and agreed to our <a herf="/terms_and_conditions.html">terms of use </a> </p>
+     <br> <br><br>By downloading our algorithms, you have read our <a href="/research_policies.html">research policies </a> and agreed to our <a href="/terms_and_conditions.html">terms of use </a> </p>
 
     </center>
 
