--- a/datasets.html
+++ b/datasets.html
@@ -6,10 +6,10 @@ title: Dataset
 <center>
     <p><br></p>
     <p>Here are the descriptions of the data collected by the research group at HCT.
-        Download will be available upon request. <br>If you are interested, please feel free to use the <a href="#contact">contact form</a> to get in touch with us.
+        Download will be available upon request. <br>If you are interested, please feel free to use the <a href="/#contact">contact form</a> to get in touch with us.
         <br><br><br>
 
-        All of the data are collected adhering to our <a href="\research_policies.html"> research policies</a>.
+        All of the data are collected adhering to our <a href="/research_policies.html"> research policies</a>.
         <hr>
 </center>
 
@@ -27,7 +27,7 @@ title: Dataset
 
         </div>
         <p>
-            <a href=#contact><button class="btn-primary-2"><i class="fa fa-download"></i> Download</button></a>
+            <a href=/#contact><button class="btn-primary-2"><i class="fa fa-download"></i> Download</button></a>
         </p>
 
 
