fixed live example (thebelab), LSTM, NN

--- a/datasets.html
+++ b/datasets.html
@@ -3,18 +3,20 @@ layout: algorithm
 title: Dataset
 ---
 
-<center>
-    <p><br></p>
+<div class="margin-center">
+    <br>
+
     <p>Here are the descriptions of the data collected by the research group at HCT.
         Download will be available upon request. <br>If you are interested, please feel free to use the <a href="/#contact">contact form</a> to get in touch with us.
-        <br><br><br>
+        <br><br>
 
         All of the data are collected adhering to our <a href="/research_policies.html"> research policies</a>.
         <hr>
-</center>
+</div>
 
 
-<div class="container">
+<div class="margin">
+    <div class="container">
     <div class="row">
 
         {% for data in site.datasets %}
@@ -41,6 +43,7 @@ title: Dataset
         </div>
         <hr>
         {% endfor %}
+    </div>
     </div>
 
 </div>
