--- a/algorithm.html
+++ b/algorithm.html
@@ -5,13 +5,15 @@ title: Algorithms
 
 
 
-    <center>
-        <p><br></p>
-<p>Our algorithms are split into 2 main categories: Speech Synthesis and Signal Processing. <br>
-You can learn more about the algorithm that are used in our research and run online examples and download our code <a herf="https://github.com/Brain2Speech/Algorithms">Here</a>.
-     <br> <br><br>By downloading our algorithms, you have read our <a href="/research_policies.html">research policies </a> and agreed to our <a href="/terms_and_conditions.html">terms of use </a> </p>
+<div class="margin-center">
+    <br>
 
-    </center>
+<p>Our algorithms are split into 2 main categories: Speech Synthesis and Signal Processing. <br>
+You can learn more about the algorithm that are used in our research and run online examples and download our code <a class="light-blue" href="https://github.com/Brain2Speech/Algorithms">Here</a>.
+   <br> In order to get the best experience with our algorithms, read the <a class="light-blue" href="/setup.html">Getting Started </a> page to setup your machine.
+    <br><br>By downloading our algorithms, you have read our <a class="light-blue" href="/research_policies.html">research policies </a> and agreed to our <a class="light-blue" href="/terms_and_conditions.html">terms of use </a> </p>
+
+</div>
 
 
 <hr>
@@ -22,7 +24,7 @@ You can learn more about the algorithm that are used in our research and run onl
 <ul>
     {% for alg in site.algorithms %}
     <li>
-        <h2><a href="{{ alg.url }}">{{ alg.title }}</a></h2>
+        <h3><a href="{{ alg.url }}">{{ alg.title }}</a></h3>
         <ul>
         <li> Type: {{alg.type}}</li>
         <li> Group: {{alg.group}}</li>
