--- a/algorithm.html
+++ b/algorithm.html
@@ -9,9 +9,22 @@ title: Algorithms
     <br>
 
 <p>Our algorithms are split into 2 main categories: Speech Synthesis and Signal Processing. <br>
-You can learn more about the algorithm that are used in our research and run online examples and download our code <a class="light-blue" href="https://github.com/Brain2Speech/Algorithms">Here</a>.
-   <br> In order to get the best experience with our algorithms, read the <a class="light-blue" href="/setup.html">Getting Started </a> page to setup your machine.
-    <br><br>By downloading our algorithms, you have read our <a class="light-blue" href="/research_policies.html">research policies </a> and agreed to our <a class="light-blue" href="/terms_and_conditions.html">terms of use </a> </p>
+You can learn more about the algorithms that are used in our research and run online examples.
+   <br><br> The algorithms for Brain2Speech are freely available under a 2-clause BSD license. Please see the LICENCE file for details.
+
+    <br>All versions of our code are available for download on <a class="light-blue" href="https://github.com/Brain2Speech/Algorithms">GitHub</a>.
+    <br> In order to get the best experience, please make sure you run the algorithms on a machine that meets the basic requirements:
+    <ul>
+    <li>
+        Python 3.6.0
+    </li>
+    <li>
+        Supported systems: 64 bit versions of Linux, MacOS, Windows
+    </li>
+    <li>
+        and other specific requirements (listed in the README for each algorithm group)
+    </li>
+</ul>
 
 </div>
 
