--- a/algorithm.html
+++ b/algorithm.html
@@ -5,12 +5,12 @@ title: Algorithms
 
 
 
-<div class="margin-center">
+<div class="margin-center ">
     <br>
 
 <p>Our algorithms are split into 2 main categories: Speech Synthesis and Signal Processing. <br>
 You can learn more about the algorithms that are used in our research and run online examples.
-   <br><br> The algorithms for Brain2Speech are freely available under a 2-clause BSD license. Please see the LICENCE file for details.
+   <br><br> The algorithms for Brain2Speech are freely available under a 2-clause BSD license. Please see the <a class="light-blue" href="https://github.com/Brain2Speech/Algorithms/blob/master/LICENSE">LICENSE</a> file for details.
 
     <br>All versions of our code are available for download on <a class="light-blue" href="https://github.com/Brain2Speech/Algorithms">GitHub</a>.
     <br> In order to get the best experience, please make sure you run the algorithms on a machine that meets the basic requirements:
@@ -47,3 +47,4 @@ You can learn more about the algorithms that are used in our research and run on
 
 </ul>
 </div>
+
