--- a/_algorithms/NN.html
+++ b/_algorithms/NN.html
@@ -149,9 +149,8 @@ for i in result:
 
     <h2> Download </h2>
 
-    <p>Go to our GitHub page to <a class="light-blue" href="https://github.com/Brain2Speech/Algorithms-/tree/master/KNN%2C%20NN%2C%20LSTM">download</a> the code</p>
-    <p>By downloading our algorithms, you have read our <a class="light-blue" href="/research_policies.html">research policies </a>
-        and agreed to our <a class="light-blue" href="/terms_and_conditions.html">terms of use </a> </p>
+    <p>Go to our GitHub page to <a class="light-blue" href="https://github.com/Brain2Speech/Algorithms/tree/master/knn_nn_lstm">download</a> the code</p>
+
 
 
 
